--- a/WPP/index.html
+++ b/WPP/index.html
@@ -32,10 +32,10 @@
                 <h2 class="menu_txt">Support</h2>
                 <img class="health_menu" src="imgs/health_icon.png" alt="hicon">
             </div>
-            <div id="account_container" class="menu_container">
+            <a id="account_container" class="menu_container" href="./account.html">
                 <h2 class="menu_txt">Account</h2>
                 <img class="account_menu" src="imgs/account_icon.png" alt="aicon">
-            </div>
+            </a>
         </div>
             <div id="content_container">
                 <div id="content_first_half">
