--- a/WPP/account.html
+++ b/WPP/account.html
@@ -11,6 +11,8 @@
 
     <div class="site-wrapper">
       <div class="center-wrapper">
+        <img class="keyhole-image-widescreen" src="./imgs/keyhole.png"/>
+
         <div class="register-wrapper">
           <h1>Your Account</h1>
           <div class="register-dialog">
@@ -19,7 +21,13 @@
             <button>Login</button>
             <p>Do not have an account?</p>
           </div>
+          <div class="register-images-mobile"> 
+            <img class="keyhole-image-mobile" src="./imgs/keyhole.png"/>
+            <img class="key-image-mobile" src="./imgs/key.png"/>
+          </div>
         </div>
+
+        <img class="key-image-widescreen" src="./imgs/key.png"/>
       </div>
     </div>
 
